<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/back4" >

    <Button
        android:id="@+id/exit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/exit" />
    
    <Button
        android:id="@+id/record"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/record_1" />
    
    <Button
        android:id="@+id/replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replay_1" />
    
    <TextView 
        android:id="@+id/replay_times_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replay_times_label" />
    
    <EditText 
        android:id="@+id/replay_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1" />
    
    <SeekBar 
        android:id="@+id/seekBar_times" 
        android:max="100" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        	/>
    <Button
        android:id="@+id/two_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_times" />
    <Button
        android:id="@+id/ten_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten_times" />
    
</LinearLayout>
